--- a/SpringBootWebBackend/pom.xml
+++ b/SpringBootWebBackend/pom.xml
@@ -83,10 +83,21 @@
             <artifactId>spring-boot-starter-security</artifactId>
         </dependency>
         <!-- fastjson 依赖 -->
-        <dependency>
+<!--        <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>fastjson</artifactId>
             <version>2.0.19</version>
+        </dependency>-->
+        <!-- mybatis plus 代码生成器 -->
+        <dependency>
+            <groupId>com.baomidou</groupId>
+            <artifactId>mybatis-plus-generator</artifactId>
+            <version>3.4.1</version>
+        </dependency>
+        <!-- 模板引擎 -->
+        <dependency>
+            <groupId>org.freemarker</groupId>
+            <artifactId>freemarker</artifactId>
         </dependency>
     </dependencies>
 </project>
